<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>WebApplicationTest</groupId>
  <artifactId>WebApplicationTest</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <build>
	  <sourceDirectory>src</sourceDirectory>
	  <testSourceDirectory>test</testSourceDirectory>
	  <outputDirectory>war/WEB-INF/classes</outputDirectory>
	    <resources>
	      <resource>
	        <directory>src</directory>
	        <excludes>
	          <exclude>**/*.java</exclude>
	        </excludes>
	      </resource>
	    </resources>
	    <plugins>
	    	<plugin>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.1</version>
		        <configuration>
		          <source>1.7</source>
		          <target>1.7</target>
		        </configuration>
	      </plugin>
	      <!-- GWT -->
			<!-- 'mvn gwt:run' - runs development mode -->
			<!-- 'mvn gwt:debug' - runs debug mode -->
			<!-- 'mvn gwt:compile' - compiles gwt -->
			<!-- 'mvn integration-test' - runs the gwt tests (*GwtTest.java) -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.6.1</version>
				<configuration>
					<!-- With multiple tests use GwtTestSuite.java for speed -->
					<extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
					<copyWebapp>true</copyWebapp>
					<hostedWebapp>war</hostedWebapp>

					<runTarget>WebApplicationTest.html</runTarget>
					<modules>
						<module>com.umanick.WebApplicationTest</module>
					</modules>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	      
	      
		  <plugin>
			<artifactId>gwt-maven-plugin</artifactId>
				<version>2.6.1</version>
				<configuration>
					<warSoruceDirectory>${basedir}/war</warSoruceDirectory>
					 <webXml>${basedir}/war/WEB-INF/web.xml</webXml>
					<webappDirectory>${project.build.directory}/${project.build.finalName}/ria</webappDirectory>
					<warSourceExcludes>.gwt-tmp/**</warSourceExcludes>
				</configuration>
		  </plugin>
	      
	    </plugins>
  </build>
  <dependencies>
  <dependency>
	<groupId>com.google.gwt</groupId>
	<artifactId>gwt-user</artifactId>
	<version>2.6.1</version>
</dependency>
  </dependencies>
</project>